...
  @override
  void initState() {
    super.initState();
    screens = [
      Screen('Erhebung', HeroIcons.play, (c) => const TrackingScreen()),
      Screen(
          'Tagebuch', HeroIcons.queueList, (c) => JournalScreen(tabContext: c)),
      Screen('Statistik', HeroIcons.chartPie, (c) => const Analysis()),
      Screen('Profil', HeroIcons.userCircle, (c) => const ProfileScreen()),
    ];
  }

  @override
  Widget build(BuildContext context) {
...
